See http://netpbm.sourceforge.net/history.html for a general history of
Netpbm.

CHANGE HISTORY 
--------------

not yet  BJH  Release 10.60.00

              pnm_hashtuple: slight performance improvement from new hash
              function.  Thanks Prophet of the Way <afu@wta.att.ne.jp>.

              ppmtospu: wild memory accesses.  Always broken (program added in
              10.58 (March 2012).

              pamtosrf: fix storage corruption.  Always broken (program added
              in 10.55 (June 2011).

              Build: change _XOPEN_SOURCE 500 to 600 because on a Mac OSX 10.8
              system, this is necessary to get 'strdup' into <strings.h>.

              Build: rename getline() in xpmtoppm.c to avoid collision
              with some libc.  Always broken.

              Build: Don't expect GCC facilities to exist when compiler is
              Clang.  (Note that Clang identifies itself as GCC).

12.06.28 BJH  Release 10.59.00

              pamtogif: Make data blocks 255 bytes instead of 254.  255 is
              the maximum allowed by GIF.  254 was intended to not trigger
              potential bugs in programs that read the file.

              ppmdraw: Add 'filledcircle' command class.  Thanks
              Elijah Griffin <eli@panix.com>.

              pamstereogram: Add -planes .  Thanks Scott Pakin
              (scott@pakin.org).

              pamstereogram: improve verbose output.  Thanks Scott Pakin
              (scott@pakin.org).

              pamstereogram: fix crash introduced in 10.54 (March 2011).

              pamstereogram: fix crash introduced in 10.53 (December 2010).

              Build: fix bug: declines to build pnmtops.  Broken in 10.58.

              Build: move -lm to end of -l's.  Broken at least since 10.35.

12.03.29 BJH  Release 10.58.00

              Add ppmtospu, 22 years late.

              pngtopam: fix incorrect output when PNG has 16 bits per pixel.
              Broken in 10.56.
